[tool.poetry]
name = "bill-cipher-cli"
version = "0.1.0"
description = ""
authors = ["Allmacdev <allmacdev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.12.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
