[tool.poetry]
name = "bill-cipher-cli"
version = "0.1.0"
description = ""
authors = ["Allmacdev <allmacdev@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
bill_cipher ='bill_cipher_cli.main:app'

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.12.3"}


[tool.poetry.group.doc.dependencies]
mkdocs = "^1.6.0"
mkdocstrings = {extras = ["python"], version = "^0.25.1"}
mkdocs-material = "^9.5.25"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.2"

[tool.taskipy.tasks]
doc = {cmd='mkdocs serve',help='Run mkdocs server'}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
